--- a/PongGame/app/build.gradle
+++ b/PongGame/app/build.gradle
@@ -38,6 +38,8 @@ android {
 }
 
 dependencies {
+    //Material, i.e., ui elements
+    implementation 'com.google.android.material:material:1.5.0-rc01'
     // Google Play services
     implementation 'com.google.android.gms:play-services-auth:19.2.0'
 
