--- a/PongGame/app/build.gradle
+++ b/PongGame/app/build.gradle
@@ -42,6 +42,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.5.0-rc01'
     // Google Play services
     implementation 'com.google.android.gms:play-services-auth:19.2.0'
+    // Circular image module
+    implementation 'com.mikhaellopez:circularimageview:4.3.0'
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.0'
