--- a/PongGame/app/build.gradle
+++ b/PongGame/app/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.annotation:annotation:1.3.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.0'
+    implementation 'com.google.android.material:material:1.4.0'
 
     //Circular Image Library
     implementation 'de.hdodenhof:circleimageview:3.1.0'
@@ -60,8 +61,8 @@ dependencies {
     //Firebase Libraries
     implementation 'com.google.firebase:firebase-database-ktx:20.0.3'
     implementation 'com.google.firebase:firebase-analytics-ktx'
-    implementation 'com.google.firebase:firebase-auth-ktx:21.0.1'
-    implementation 'com.google.firebase:firebase-storage:20.0.0'
+    implementation 'com.google.firebase:firebase-auth-ktx'
+    implementation 'com.google.firebase:firebase-storage-ktx'
     implementation platform('com.google.firebase:firebase-bom:29.0.3')
 
     testImplementation 'junit:junit:'
