--- a/PongGame/app/build.gradle
+++ b/PongGame/app/build.gradle
@@ -74,5 +74,5 @@ dependencies {
     // ViewModel
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
     implementation 'androidx.fragment:fragment-ktx:1.4.0'
-    implementation 'androidx.activity:activity-ktx:1.4.0'
+    implementation 'androidx.activity:activity-ktx:1.2.0-alpha03'
 }
