--- a/PongGame/app/src/main/AndroidManifest.xml
+++ b/PongGame/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.example.ponggame">
 
     <uses-permission android:name="android.permission.HIGH_SAMPLING_RATE_SENSORS" />
-
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/pong_icon"
